--- a/public/css_web/landing-home.css
+++ b/public/css_web/landing-home.css
@@ -67,7 +67,7 @@ main {
 }
 
 .landing-nav-top{
-  position: fixed;
+  position: absolute;
   width: 100%;
   display: flex;
   align-items: center;
@@ -113,7 +113,6 @@ main {
 
 .landing-nav-btn{
   padding: 10px;
-  display: block;
   background-color: transparent;
   border-radius: 5px;
   border: 2px solid white;
@@ -197,6 +196,10 @@ main {
 
 
 
+
+.feature-container{
+  margin-top: 35px;
+}
 
 body {
   background: rgb(255,209,160);
@@ -300,7 +303,7 @@ body {
 /* Slideshow container */
 .slideshow-container {
   padding-top: 110px;
-  max-width: 1000px;
+  max-width: 98%;
   position: relative;
   margin: auto;
 }
@@ -314,7 +317,7 @@ body {
 .prev, .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 54%;
   width: auto;
   margin-top: -22px;
   padding: 16px;
@@ -384,14 +387,23 @@ body {
   to {opacity: 1}
 }
 
+.slideshow-container .text{
+  background-color: 	#000080;
+  font-size: 22px;
+}
 
+
+
+
+/*feature section*/
 
 .row {
   border-spacing: 20px;
-  margin: 50px 150px;
+  margin: 50px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   flex-wrap: wrap;
+  align-items: center;
 }
 
 .card {
@@ -399,14 +411,17 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   display: table-cell;
-  width: 300px;
-  height: 425px;
+  width: 55%;
+  height: 400px;
   border-radius: 10px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+  margin-top: 20px;
   background-color: white;
+  position: relative;
 }
 .card img {
   border-radius: 10px 10px 0 0;
+  height: 216 px;
 }
 
 /* On mouse-over, add a deeper shadow */
@@ -415,4 +430,62 @@ body {
 }
 .card-text {
   padding: 2px 16px;
+}
+
+.card-text p{
+  text-align: justify;
+}
+
+
+
+
+/*landing page images*/
+
+.children-queue{
+  text-align: center;
+}
+
+.children-queue-img{
+  width: 70%;
+}
+
+.row-img-container{
+  width: 40%;
+}
+
+.image-row2{
+  width: 100%;  
+  display: flex;
+  align-items: center;
+  opacity: 0.7;
+}
+
+.image-row1{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  opacity: 0.7;
+
+}
+
+.image-row3{
+  width: 100%;
+  display: flex;
+  align-items: center;  
+  opacity: 0.7;
+
+}
+.image-row4{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  opacity: 0.7;
+
+}
+.image-row5{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  opacity: 0.7;
+
 }
